# organize_project

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
calculator/: sum.py
cli/: main.py
scripts/: cleanup_script.sh
tests/: test_sum.py
