[tool.poetry]
name = "organize-project"
version = "0.1.0"
description = "Teste de organização de projeto."
authors = ["Thiago Serra <thiagosaldanhaserra@gmail.com>"]
readme = "README.md"
packages = [{include = "organize_project"}]

[tool.poetry.dependencies]
python = "^3.11.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
isort = "^5.12.0" 
black = "^23.9.1" # Ajusta o codigo
mkdocs = "^1.5.3" # cria documentação
prospector = "^1.10.2" # da sugestões para se enquadrar na pep
pip-audit = "^2.6.1" # segurança


[tool.black]
profile = "black"
line-length = 79

[tool.isort]
profile = "black"
skip = ["myenv/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
