[tool.poetry]
name = "organize project"
version = "0.1.0"
description = "Test organize"
authors = ["Thiago Serra <thiagosaldanhaserra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"
mkdocs = "^1.5.3"
pip-audit = "^2.6.1"

[tool.poetry.group.prod.dependencies]
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
